# knou_rate_course

./: .dockerignore  .env.example  .env.local  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.aws/: task-definition.json
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: bcd59385275b_initial.py
app/: config.py
app/api/: __init__.py
app/api/v1/: auth.py  courses.py  majors.py  reviews.py  search.py  tags.py
app/constants/: __init__.py  auth.py  cache.py  cache_constants.py  course.py  course_constants.py  rate_limit.py  review.py  validation.py
app/core/: middleware.py  profanity_filter.py  rate_limit.py
app/db/: __init__.py  database.py  redis.py  seed.py
app/models/: __init__.py  course.py  major.py  review.py  tag.py  user.py
app/repositories/: __init__.py  base.py  course.py  review.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  course.py  major.py  review.py  search.py
app/services/: __init__.py  auth.py  cache.py  course.py  mailer.py  major.py  review.py  tag.py  trending.py
app/services/auth/: auth.py  errors.py
app/services/review/: errors.py  review.py
app/utils/: __init__.py  auth.py
data/: knou_courses.json
docs/: DECISIONS.md
knou_rate_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: scrape_knou.py
tests/: conftest.py
tests/api/: test_health.py
tests/api/v1/: test_auth.py
tests/core/: test_profanity_filter.py
tests/services/auth/: test_auth.py
tests/services/review/: test_review.py
