[project]
name = "knou-rate-course"
version = "0.1.0"
description = "방통대 꿀과목 DB - Course rating service for KNOU students"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.12.5",
    "greenlet>=3.3.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi-mail>=1.6.1",
    "sendgrid>=6.12.5",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "pytest-asyncio>=1.3.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.0",
]
dev = [
    "black>=25.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "setuptools>=80.9.0",
]
